--- a/config.env
+++ b/config.env
@@ -1,4 +1,7 @@
 PORT = 4000
 
-JWT_SECRET_KEY = 'secretKey'
+JWT_KEY_SECRET = secretKey
+
+RAZORPAY_KEY_ID = rzp_test_fFqWdkRjmFyWSF
+RAZORPAY_KEY_SECRET = EYsdvBsKtkELg9Nwb1BBjL0a
 
