--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.5.0",
+    "pdfkit-table": "^0.1.99",
     "razorpay": "^2.9.0",
     "sequelize": "^6.32.1",
     "uuid": "^9.0.0"
