--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "start-server": "node app.js",
     "start:dev": "nodemon app.js"
   },
